prevents modal image from stretching

--- a/src/Components/PhotoGallery/PhotoGallery.module.css
+++ b/src/Components/PhotoGallery/PhotoGallery.module.css
@@ -26,6 +26,7 @@
 .modal img {
   max-width: 80vw;
   max-height: 60vh;
+  object-fit: contain
 }
 
 .close {
